Bug#30671   "ALTER SERVER can cause server to crash"   While retrieving values, it would erronously set the socket value   to NULL and attempt to use it in strcmp().   Ensure it is correctly set to "" so that strcmp may not crash.