sql/sql_servers.cc
@@ -289,7 +289,7 @@ get_server_from_table_to_cache(TABLE *table)
 {
   /* alloc a server struct */
   char *ptr;
-  char *blank= (char*)"";
+  char * const blank= (char*)"";
   FOREIGN_SERVER *server= (FOREIGN_SERVER *)alloc_root(&mem,
                                                        sizeof(FOREIGN_SERVER));
   DBUG_ENTER("get_server_from_table_to_cache");
@@ -312,7 +312,7 @@ get_server_from_table_to_cache(TABLE *table)
   server->port= server->sport ? atoi(server->sport) : 0;
 
   ptr= get_field(&mem, table->field[6]);
-  server->socket= ptr && strlen(ptr) ? ptr : NULL;
+  server->socket= ptr && strlen(ptr) ? ptr : blank;
   ptr= get_field(&mem, table->field[7]);
   server->scheme= ptr ? ptr : blank;
   ptr= get_field(&mem, table->field[8]);
